--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,16 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          # Menambahkan library dagshub agar bisa connect ke remote
+          # Tambahkan dagshub di sini
           pip install pandas scikit-learn mlflow dagshub
 
-      - name: Run Model Training (Retraining with MLflow)
+      - name: Run Model Training
         env:
           MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
           MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
         run: |
           cd MLProject
-          # Pastikan file modelling.py di folder ini ISINYA adalah script yang Advanced (yang connect ke DagsHub)
           python modelling.py
 
   build_push_docker:
