--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          # Tambahkan dagshub di sini
-          pip install pandas scikit-learn mlflow dagshub
+          pip install pandas scikit-learn mlflow dagshub seaborn matplotlib
 
       - name: Run Model Training
         env:
